[gd_scene load_steps=17 format=3 uid="uid://byy1uildj3qlc"]

[ext_resource type="Script" path="res://microjogos/2023S1/seu_projeto/cenas/scripts/main.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://blvcpbo3lcq82" path="res://microjogos/2023S1/projeto_luiscolosimo/recursos/kobeni/dancer_sprite.png" id="2_rh53k"]
[ext_resource type="Script" path="res://microjogos/2023S1/projeto_luiscolosimo/cenas/child.gd" id="4_pr0bi"]
[ext_resource type="Script" path="res://microjogos/2023S1/projeto_luiscolosimo/cenas/scripts/Mira.gd" id="4_r5nct"]
[ext_resource type="Texture2D" uid="uid://cpmtgkkxxq46d" path="res://microjogos/2023S1/projeto_luiscolosimo/recursos/kobeni/child1.png" id="5_xappj"]
[ext_resource type="Texture2D" uid="uid://bbifbfygrl3ck" path="res://microjogos/2023S1/projeto_luiscolosimo/recursos/dedo.png" id="6_rsfoc"]
[ext_resource type="Texture2D" uid="uid://bt3ua0mlh0uei" path="res://microjogos/2023S1/projeto_luiscolosimo/recursos/casa/pedra1.png" id="8_8ymq0"]
[ext_resource type="Texture2D" uid="uid://dk40vxf34co6l" path="res://microjogos/2023S1/projeto_luiscolosimo/recursos/casa/casa2.png" id="8_l8pfv"]
[ext_resource type="Texture2D" uid="uid://dtae61v0j12cy" path="res://microjogos/2023S1/projeto_luiscolosimo/recursos/casa/planta1.png" id="9_npe7l"]
[ext_resource type="Texture2D" uid="uid://cvrwgkoawfjct" path="res://microjogos/2023S1/projeto_luiscolosimo/recursos/casa/cerca1.png" id="10_3isog"]
[ext_resource type="AudioStream" uid="uid://cl4h4jm2bsvrs" path="res://microjogos/2023S1/projeto_luiscolosimo/recursos/musica/BeepBox-Song.wav" id="11_0y8q2"]

[sub_resource type="Animation" id="Animation_j06cc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_15o71"]
resource_name = "dance"
length = 4.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 37, 36, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mp755"]
_data = {
"RESET": SubResource("Animation_j06cc"),
"dance": SubResource("Animation_15o71")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4i6xm"]
radius = 31.0
height = 92.0

[sub_resource type="CircleShape2D" id="CircleShape2D_u5dvy"]
radius = 11.0

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Casa2" type="Sprite2D" parent="."]
position = Vector2(864, 624)
scale = Vector2(2.12175, 2.12175)
texture = ExtResource("8_l8pfv")

[node name="Casa3" type="Sprite2D" parent="."]
position = Vector2(448, 608)
scale = Vector2(2.55438, 2.55438)
texture = ExtResource("8_l8pfv")

[node name="Cria" type="Sprite2D" parent="."]
position = Vector2(1154, 755)
hframes = 39
frame = 27
script = ExtResource("4_pr0bi")

[node name="Kobeni" type="Sprite2D" parent="Cria"]
visible = false
z_index = 100
position = Vector2(-1, -24)
scale = Vector2(1.40625, 1.40625)
texture = ExtResource("2_rh53k")
hframes = 39

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cria/Kobeni"]
autoplay = "dance"
libraries = {
"": SubResource("AnimationLibrary_mp755")
}

[node name="cria" type="Sprite2D" parent="Cria"]
position = Vector2(-9, 8)
scale = Vector2(0.286, 0.286)
texture = ExtResource("5_xappj")

[node name="Area2D" type="Area2D" parent="Cria"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cria/Area2D"]
position = Vector2(-8, 9)
shape = SubResource("CapsuleShape2D_4i6xm")

[node name="Mira" type="Area2D" parent="."]
z_index = 1
position = Vector2(960, 540)
script = ExtResource("4_r5nct")

[node name="Sprite2D" type="Sprite2D" parent="Mira"]
position = Vector2(24, -27.9999)
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_rsfoc")

[node name="Hitbox" type="CollisionShape2D" parent="Mira"]
position = Vector2(3, -2)
shape = SubResource("CircleShape2D_u5dvy")

[node name="locais" type="Node2D" parent="."]

[node name="loc1" type="Marker2D" parent="locais"]
position = Vector2(473, 914)

[node name="loc2" type="Marker2D" parent="locais"]
position = Vector2(1019, 1001)

[node name="loc3" type="Marker2D" parent="locais"]
position = Vector2(1159, 753)

[node name="mundo" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="mundo"]
position = Vector2(475.5, 926.5)
scale = Vector2(2.57407, 2.56667)
texture = ExtResource("8_8ymq0")

[node name="Sprite2D2" type="Sprite2D" parent="mundo"]
position = Vector2(1039, 1021)
scale = Vector2(2.57407, 2.56667)
texture = ExtResource("9_npe7l")

[node name="Sprite2D3" type="Sprite2D" parent="mundo"]
position = Vector2(1110, 787)
scale = Vector2(2.57407, 2.56667)
texture = ExtResource("10_3isog")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_0y8q2")
autoplay = true

[connection signal="area_entered" from="Cria/Area2D" to="Cria" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Cria/Area2D" to="Cria" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="Mira" to="Mira" method="add_target"]
[connection signal="area_exited" from="Mira" to="Mira" method="remove_target"]
